# soniox-subtitle

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs  settings.rs
src/components/: Settings.css  Settings.tsx
src/styles/: App.css  index.css
