[package]
name = "soniox-subtitle"
version = "0.1.0"
description = "MVP subtitle generator using Soniox"
authors = []
license = ""
repository = ""
default-run = "soniox-subtitle"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "soniox-subtitle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1"
cpal = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
